force-app/main/default/objects/Customer_Success_Engagement__c/Customer_Success_Engagement__c.object-meta.xml
<CustomObject>
    <label>Customer Success Engagement</label>
    <pluralLabel>Customer Success Engagements</pluralLabel>
    <nameField>
        <displayFormat>CSE-{00000000}</displayFormat>
        <label>Customer Success Engagement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>