force-app/main/default/objects/Customer_Success_Engagement__c/fields/Churn_Category__c.field-meta.xml
<CustomField>
    <fullName>Churn_Category__c</fullName>
    <label>Churn Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Renewal</fullName>
            </value>
            <value>
                <fullName>Budget Cuts</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Product Fit</fullName>
            </value>
            <value>
                <fullName>Merger or Acquisition</fullName>
            </value>
            <value>
                <fullName>Partner Issue</fullName>
            </value>
            <value>
                <fullName>Support Issue</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>No Longer Needed</fullName>
            </value>
            <value>
                <fullName>Downsell to Zero</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>