force-app/main/default/objects/Customer_Success_Engagement__c/fields/Churn_Notes__c.field-meta.xml
<CustomField>
    <fullName>Churn_Notes__c</fullName>
    <label>Churn Notes</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>