force-app/main/default/objects/Customer_Success_Engagement__c/fields/Churn_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason__c</fullName>
    <label>Churn Reason</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>