force-app/main/default/objects/Customer_Success_Engagement__c/fields/Churned_On__c.field-meta.xml
<CustomField>
    <fullName>Churned_On__c</fullName>
    <label>Churned On</label>
    <type>Date</type>
</CustomField>