force-app/main/default/objects/Customer_Success_Engagement__c/fields/Current_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Current_Renewal__c</fullName>
    <label>Current Renewal</label>
    <type>Lookup</type>
    <referenceTo>Partner_Renewal__c</referenceTo>
    <relationshipLabel
  >Customer Success Engagements (Current Renewal)</relationshipLabel>
    <relationshipName>Customer_Success_Engagements_Current</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>