force-app/main/default/objects/Customer_Success_Engagement__c/fields/External_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Contract_Id__c</fullName>
    <label>External Contract Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>