force-app/main/default/objects/Customer_Success_Engagement__c/fields/External_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Customer_Id__c</fullName>
    <label>External Customer Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>