force-app/main/default/objects/Customer_Success_Engagement__c/fields/Handoff_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Snapshot__c</fullName>
    <description
  >JSON snapshot of the completed Deal_Implementation__c's key facts captured at handoff time (doc Sprint 42 section 42.7), so Customer Success has the implementation context without a live join back to a record it may not have access to.</description>
    <label>Handoff Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>