force-app/main/default/objects/Customer_Success_Engagement__c/fields/Health_Calculated_On__c.field-meta.xml
<CustomField>
    <fullName>Health_Calculated_On__c</fullName>
    <label>Health Calculated On</label>
    <type>DateTime</type>
</CustomField>