force-app/main/default/objects/Customer_Success_Engagement__c/fields/Health_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Health_Explanation__c</fullName>
    <label>Health Explanation</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>