force-app/main/default/objects/Customer_Success_Engagement__c/fields/Health_Policy_Key__c.field-meta.xml
<CustomField>
    <fullName>Health_Policy_Key__c</fullName>
    <label>Health Policy Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>