force-app/main/default/objects/Customer_Success_Engagement__c/fields/Health_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Health_Snapshot__c</fullName>
    <description
  >JSON snapshot of the metric inputs and computed result at the time health was last calculated, kept explainable even if policy metadata later changes - mirrors Deal_Revenue_Attribution__c.Calculation_Snapshot__c's precedent.</description>
    <label>Health Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>