force-app/main/default/objects/Customer_Success_Engagement__c/fields/Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Status__c</fullName>
    <label>Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Assessed</fullName>
                <default>true</default>
                <label>Not Assessed</label>
            </value>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>Watch</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>