force-app/main/default/objects/Customer_Success_Engagement__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <label>Implementation</label>
    <type>Lookup</type>
    <referenceTo>Deal_Implementation__c</referenceTo>
    <relationshipName>Customer_Success_Engagements</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>