force-app/main/default/objects/Customer_Success_Engagement__c/fields/Internal_Customer_Success_Owner__c.field-meta.xml
<CustomField>
    <fullName>Internal_Customer_Success_Owner__c</fullName>
    <label>Internal Customer Success Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel
  >Customer Success Engagements (CS Owner)</relationshipLabel>
    <relationshipName>Owned_Customer_Success_Engagements</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>