force-app/main/default/objects/Customer_Success_Engagement__c/fields/Originating_Deal__c.field-meta.xml
<CustomField>
    <fullName>Originating_Deal__c</fullName>
    <label>Originating Deal</label>
    <type>Lookup</type>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel
  >Customer Success Engagements (Originating Deal)</relationshipLabel>
    <relationshipName>Customer_Success_Engagements_As_Origin</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>