force-app/main/default/objects/Customer_Success_Engagement__c/fields/Originating_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Originating_Opportunity__c</fullName>
    <label>Originating Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Customer_Success_Engagements</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>