force-app/main/default/objects/Customer_Success_Engagement__c/fields/Partner_Success_Owner__c.field-meta.xml
<CustomField>
    <fullName>Partner_Success_Owner__c</fullName>
    <label>Partner Success Owner</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Customer_Success_Engagements</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>