force-app/main/default/objects/Customer_Success_Engagement__c/fields/Previous_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Previous_Engagement__c</fullName>
    <description
  >Self-lookup: when a churned customer re-engages under a new engagement row, this links back to the engagement that churned, per doc Sprint 42 lifecycle guidance to never resurrect a closed engagement in place.</description>
    <label>Previous Engagement</label>
    <type>Lookup</type>
    <referenceTo>Customer_Success_Engagement__c</referenceTo>
    <relationshipLabel>Subsequent Engagements</relationshipLabel>
    <relationshipName>Subsequent_Engagements</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>