force-app/main/default/objects/Customer_Success_Engagement__c/fields/Primary_Participant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Participant__c</fullName>
    <label>Primary Participant</label>
    <type>Lookup</type>
    <referenceTo>Deal_Participant__c</referenceTo>
    <relationshipName>Customer_Success_Engagements</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>