force-app/main/default/objects/Customer_Success_Engagement__c/fields/Primary_Partner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner__c</fullName>
    <label>Primary Partner</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel
  >Customer Success Engagements (Primary Partner)</relationshipLabel>
    <relationshipName>Customer_Success_Engagements_As_Partner</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>