force-app/main/default/objects/Customer_Success_Engagement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description
  >Trimmed to the values this sprint's commands actually produce (doc Sprint 42 lists more sub-states; Adoption/Commercial Risk collapse into At Risk, Renewal/Expansion phases are tracked on the linked Partner_Renewal__c/Partner_Expansion__c rows instead of duplicated here).</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Handoff</fullName>
                <default>true</default>
                <label>Pending Handoff</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>